--- a/src/docs/asciidoc/readme.adoc
+++ b/src/docs/asciidoc/readme.adoc
@@ -2,7 +2,7 @@
 
 == Spring Boot components visualizer (under construction)
 
-A tool to visualize external and internal connections of a Sprint Boot application.
+A tool for visualizing components, interfaces, and their relations in a Spring Boot application.
 
 By default, generates a PlantUML schema with Spring components, relations and interfaces like mvc controllers, websocket services, jms and so on.
 
@@ -27,9 +27,9 @@ image::./test/service1/src/schema/components.svg[]
 - @FeignClient
 - Standalone Feign client
 - RestTemplate based clients
+- @Scheduled
 
 === Planned to support
-- @Scheduled
 - TaskScheduler
 - @KafkaListener
 - KafkaTemplate
