--- a/src/docs/asciidoc/readme.adoc
+++ b/src/docs/asciidoc/readme.adoc
@@ -47,7 +47,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation("github.m4gshm:spring-connections-visualizer:0.0.1-beta1")
+    testImplementation("github.m4gshm:spring-connections-visualizer:TODO")
     testImplementation("org.apache.commons:commons-lang3:3.14.0")
 }
 
