--- a/src/docs/asciidoc/readme.adoc
+++ b/src/docs/asciidoc/readme.adoc
@@ -28,9 +28,9 @@ image::./test/service1/src/schema/components.svg[]
 - Standalone Feign client
 - RestTemplate based clients
 - @Scheduled
+- SchedulingConfigurer based beans
 
 === Planned to support
-- TaskScheduler
 - @KafkaListener
 - KafkaTemplate
 - GRPC
@@ -47,7 +47,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation("github.m4gshm:spring-connections-visualizer:0.0.1-beta1")
+    testImplementation("github.m4gshm:spring-connections-visualizer:TODO")
     testImplementation("org.apache.commons:commons-lang3:3.14.0")
 }
 
